--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</div>
 
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-<script src="nzregions.js"></script>
-<script src="main.js"></script>
+<script src="js/nzregions.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
